@@ -1,3 +1,8 @@
+2003-11-28  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* command.c (test_palette_subcommand): Reworked 'test palette' to use
+	only one temporary file.
+
 2003-11-25  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/gplt_x11.c term/x11.trm: Clean up code to remove compiler 
